# Supermarket_Agent

./: .gitignore  README.md  ai_agent.py  app.py  data_manager.py  pyproject.toml  requirements.txt  supermarket_agent.py
data/: barcodes_v1.csv  barcodes_v2.csv  barcodes_v3_admission.csv  barcodes_v3_customer.csv  barcodes_v3_customer_test.csv
data_backup/: file_metadata.json
data_backup/db/faiss_db/: index.faiss  index.pkl
data_backup/db/pdf_db_20251116_161153/: index.faiss  index.pkl
data_backup/db/product_db_20250925_105914/: index.faiss  index.pkl
faiss_db/: index.faiss  index.pkl
history/: supermarket_agent_v1.0.py  supermarket_agent_v1.1.1_localEmbedding.py.py  supermarket_agent_v1.1.py  supermarket_agent_v1.2.py  supermarket_agent_v1.4.py
supermarket_agent/: __init__.py  app.py  config.py  embeddings.py  file_ops.py  processing.py  responses.py
