[project]
name = "supermarket-agent-1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dashscope>=1.25.10",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-deepseek>=1.0.1",
    "langchain-experimental>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "tabulate>=0.9.0",
    "transformers>=4.40.0",
]
